--- a/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/loginrefund/loginrefund.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/loginrefund/loginrefund.component.html
@@ -15,7 +15,7 @@
         <button class="btn" type="submit" (click)="submit()" [disabled]="form.invalid">
           Login
         </button>
-        <button class="btn" type="button" (click)="onNoClick()">Exit</button>
+        <button class="btn" type="button" (click)="onClick_Close()">Exit</button>
       </div>
     </form>
   </div>
