--- a/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/new-recharge/new-recharge.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/new-recharge/new-recharge.component.html
@@ -92,8 +92,8 @@
     </div>
 
     <div class="d-flex justify-content-center align-item-center mx-5 mb-4">
+        <button type="submit" class="btn btn-success me-2" (click)="onSubmit()">Recharge</button>
         <button type="button" class="btn btn-danger me-2" (click)="toggleedit()">Cancel</button>
-        <button type="submit" class="btn btn-success" (click)="onSubmit()">Recharge</button>
     </div>
 
 </div>
