--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -215,11 +215,11 @@
                 <li><a (click)="navgetToUrl('/traiReports');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-paper-plane icon">&nbsp;</i>TRAI Reports </a>
                 </li>
-                <li><a (click)="navgetToUrl('/msoReports');setActiveLinkTab($event)"><i
+                <!-- <li><a (click)="navgetToUrl('/msoReports');setActiveLinkTab($event)"><i
                             class="fa fa-fw fa-qq icon">&nbsp;</i>MSO
-                        Reports </a> </li>
-                <li><a (click)="navgetToUrl('/historyReports');setActiveLinkTab($event)"><i
-                            class="fa fa-fw fa-star icon">&nbsp;</i> HISTORY Reports</a></li>
+                        Reports </a> </li> -->
+                <!-- <li><a (click)="navgetToUrl('/historyReports');setActiveLinkTab($event)"><i
+                            class="fa fa-fw fa-star icon">&nbsp;</i> HISTORY Reports</a></li> -->
 
             </ul>
         </li>
