--- a/src/app/admin/features/cas_operaion/finger-print/finger-print.component.html
+++ b/src/app/admin/features/cas_operaion/finger-print/finger-print.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="title">
+    <div class="title1">
         <p>Finger Print</p>
     </div>
     <div class="d-flex justify-content-center align-item-center">
@@ -77,6 +77,7 @@
                                     <mat-radio-button class="radio-button" [value]="false">No
                                     </mat-radio-button>
                                 </mat-radio-group>
+
                                 <div *ngIf="form.get('isforce')?.invalid && form.get('isforce')?.touched">
                                     <small class="text-danger">Force is required.</small>
                                 </div>
@@ -462,7 +463,7 @@
                             <div class="col-sm-4">
                                 <label for="">Time Span</label>
                             </div>
-                            <div *ngIf="!isHH" class=" col-4 col-md-4">
+                            <div *ngIf="!isHH" class=" col-4 col-md-2">
                                 <input type="number" formControlName="hh" [(ngModel)]="hh" pattern="[0-9]" maxlength="2"
                                     (keypress)="onKeydown($event)" placeholder="HH" type="text" value="0">
                             </div>
@@ -478,11 +479,12 @@
                     </div>
                 </div>
             </div>
-
+            <!-- {{this.isforce}} -->
             <div class="d-flex justify-content-end align-items-center">
                 <div class="d-flex justify-content-center align-items-center" style="padding: 10px;">
                     <button (click)="submit()" class="btn btn-success">Send</button> &nbsp;
-                    <button (click)="stop()" class="btn btn-danger" [disabled]="!isStopButtonEnabled">Stop </button>
+                    <button (click)="stop()" class="btn btn-danger" [disabled]="!this.isforce && !isStopButtonEnabled ">
+                        Stop </button>
                 </div>
 
             </div>
