--- a/src/app/admin/features/cas_operaion/finger-print/finger-print.component.scss
+++ b/src/app/admin/features/cas_operaion/finger-print/finger-print.component.scss
@@ -1,14 +1,6 @@
-// .container {
-//     max-width: 1200px;
-//     background: #ffffff;
-//     border-radius: 0.5rem;
-//     box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1),
-//         0px 5px 12px -2px rgba(0, 0, 0, 0.1),
-//         0px 18px 36px -6px rgba(0, 0, 0, 0.1);
-//     overflow: hidden;
-// }
 
-.container .title {
+
+.container .title1 {
     padding: 25px;
     background: #f6f8fa;
 }
@@ -17,20 +9,20 @@
     display: flex;
 }
 
-.container .title p {
+.container .title1 p {
     font-size: 25px;
     font-weight: 500;
-    position: relative;
+    // position: relative;
 }
 
-.container .title p::before {
+.container .title1 p::before {
     content: "";
-    position: absolute;
+    // position: absolute;
     bottom: 0px;
     left: 0;
     width: 100px;
     height: 3px;
-    background: linear-gradient(to right, #058372, #acf3cc);
+    // background: linear-gradient(to right, #058372, #acf3cc);
 }
 
 .card {
