--- a/src/app/admin/features/cas_operaion/mail/mail.component.html
+++ b/src/app/admin/features/cas_operaion/mail/mail.component.html
@@ -1,7 +1,7 @@
 <div class="main justify-content-center align-item-center">
     <div class="col-12 col-md-6 p-3">
         <div class="card">
-            <div class="title">
+            <div class="title1">
                 <p>Mail Service</p>
             </div>
             <div class=" d-flex justify-content-center align-item-center">
@@ -197,7 +197,7 @@
     </div>
     <div class="col-12 col-md-6 p-3">
         <div class="card">
-            <div class="title">
+            <div class="title1">
                 <p>Mail History</p>
             </div>
             <div class="row d-flex align-items-center justify-content-center" style="padding: 0.5rem;">
