--- a/src/app/admin/features/cas_operaion/message/message.component.html
+++ b/src/app/admin/features/cas_operaion/message/message.component.html
@@ -1,7 +1,7 @@
 <div class="main justify-content-center align-item-center">
     <div class="col-12 col-md-6 col-sm-6 p-3">
         <div class="card">
-            <div class="title">
+            <div class="title1">
                 <p>Message Service</p>
             </div>
             <div class=" d-flex justify-content-center align-item-center">
@@ -22,7 +22,7 @@
 
                                             <mat-autocomplete #auto="matAutocomplete">
                                                 <mat-option *ngFor="let casItem of filteredcas()" [value]="casItem.name"
-                                                    (click)="onSelectionFingerPrint(casItem)">
+                                                    (click)="onSelection(casItem)">
                                                     {{ casItem.name }}
                                                 </mat-option>
                                             </mat-autocomplete>
@@ -334,7 +334,7 @@
     </div>
     <div class="col-12 col-md-6 col-sm-6 p-3">
         <div class="card">
-            <div class="title">
+            <div class="title1">
                 <p>Message History</p>
             </div>
             <div class="row d-flex align-items-center justify-content-center" style="padding: 0.5rem;">
