--- a/src/app/admin/features/cas_operaion/scrolling/scrolling.component.html
+++ b/src/app/admin/features/cas_operaion/scrolling/scrolling.component.html
@@ -1,7 +1,7 @@
 <div class="justify-content-center align-item-center main">
     <div class="col-12 col-md-6 col-sm-6 p-3 ">
         <div class="card">
-            <div class="title">
+            <div class="title1">
                 <p>Scrolling Message</p>
             </div>
             <div class="d-flex justify-content-center align-item-center">
@@ -313,7 +313,8 @@
                                             <option *ngFor="let st of scrollType" [value]="st.value">{{st.lable}}
                                             </option>
                                         </select>
-                                        <div *ngIf="form.get('languagetype')?.invalid && form.get('languagetype')?.touched">
+                                        <div
+                                            *ngIf="form.get('languagetype')?.invalid && form.get('languagetype')?.touched">
                                             <small class="text-danger">Scroll Type is required.</small>
                                         </div>
                                     </div>
@@ -343,13 +344,22 @@
                         </div>
 
                     </div>
+                    <!-- <div class="d-flex justify-content-end align-items-center">
+                        <div class="d-flex justify-content-center align-items-center" style="padding: 10px;">
+                            <button (click)="submit()" class="btn btn-success"
+                                [disabled]="isStopButtonEnabled ">Send</button> &nbsp;
+                            <button (click)="stop()" class="btn btn-danger" [disabled]="!isStopButtonEnabled ">Stop
+                            </button>
+                        </div>
+
+                    </div> -->
                 </form>
             </div>
         </div>
     </div>
     <div class="col-12 col-md-6 sol-sm-6 p-3 mobile">
         <div class="card">
-            <div class="title">
+            <div class="title1">
                 <p>Scrolling History</p>
             </div>
             <div class="row d-flex  justify-content-center" style="padding: 0.5rem;">
