--- a/src/app/admin/features/cas_operaion/scrolling/scrolling.component.scss
+++ b/src/app/admin/features/cas_operaion/scrolling/scrolling.component.scss
@@ -16,25 +16,25 @@
     display: flex;
 }
 
-.card .title {
+.card .title1 {
     padding: 5px;
     background: #f6f8fa;
 }
 
-.card .title p {
+.card .title1 p {
     font-size: 25px;
     font-weight: 500;
-    position: relative;
+    // position: relative;
 }
 
-.card .title p::before {
+.card .title1 p::before {
     content: "";
-    position: absolute;
+    // position: absolute;
     bottom: 0px;
     left: 0;
     width: 100px;
     height: 3px;
-    background: linear-gradient(to right, #058372, #acf3cc);
+    // background: linear-gradient(to right, #058372, #acf3cc);
 }
 
 .card {
