--- a/src/app/admin/features/channel_setting/Reports_page/Trai/subscription-based/subscription-based.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/subscription-based/subscription-based.component.html
@@ -15,7 +15,7 @@
                         </div>
                         <div class="col-12 col-md-6">
                             <mat-form-field class="input-field" appearance="outline">
-                                <mat-label>Select Operator</mat-label>
+                                <!-- <mat-label>Select Operator</mat-label> -->
                                 <input type="text" matInput [matAutocomplete]="auto" (input)="filterOperators($event)"
                                     [value]="selectedOperator?.name">
                                 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayOperator">
@@ -26,20 +26,27 @@
                                     </mat-option>
                                 </mat-autocomplete>
                             </mat-form-field>
+                            <div *ngIf="submitted && !operatorid" class="text-danger" style="font-size: small;">
+                                Operator is required
+                           </div>
                         </div>
                     </div>
                     <div class=" display mb-3">
                         <div class="col-12 col-md-6 sidename">
                             <span style="color: #243359;">Select a Date</span>
                         </div>
+                        
                         <div class="col-12 col-md-6">
                             <mat-form-field class="input-field" appearance="outline">
                                 <mat-label>Choose a date</mat-label>
-                                <input matInput [matDatepicker]="picker"  (dateChange)="logValues()" [(ngModel)]="date" placeholder="Select a Date"
+                                <input matInput [matDatepicker]="picker"  (dateChange)="logValues()" [(ngModel)]="date"  placeholder="Select a Date"
                                     readonly>
                                 <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                                 <mat-datepicker #picker></mat-datepicker>
                             </mat-form-field>
+                            <div *ngIf="submitted && !date" class="text-danger" style="font-size: small;">
+                                 Date is required
+                            </div>
                         </div>
                     </div>
                     <div class="input_box display mb-3">
@@ -156,6 +163,9 @@
                                 <option *ngFor="let month of months" [value]="month.value">{{ month.name }}
                                 </option>
                             </select>
+                            <div *ngIf="submitted && !selectedMonth" class="text-danger" style="font-size: small;">
+                                Month is required
+                            </div>
                         </div>
                     </div>
                     <div class="input_box display mb-3">
@@ -167,6 +177,9 @@
                                 <option value="0" selected>Select Year</option>
                                 <option *ngFor="let year of years" [value]="year">{{ year }}</option>
                             </select>
+                            <div *ngIf="submitted && !selectedYear" class="text-danger" style="font-size: small;">
+                                Year is required
+                            </div>
                         </div>
                     </div>
                     <div class="input_box display mb-3">
@@ -179,6 +192,9 @@
                                 <option *ngFor="let date of Date" [value]="date.value">{{ date.name }}
                                 </option>
                             </select>
+                            <div *ngIf="submitted && !selectedweek" class="text-danger" style="font-size: small;">
+                                Week is required
+                            </div>
                         </div>
                     </div>
                     <div class="input_box display1 mb-3">
