--- a/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/bulk-recharge/bulk-recharge.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/bulk-recharge/bulk-recharge.component.html
@@ -37,8 +37,7 @@
     </div>
 
     <div class="d-flex justify-content-center align-item-center mx-5 mb-4">
+        <button type="button" class="btn btn-success me-2" (click)="onSubmit()"  [disabled]="!remarks || !amount ">Recharge</button>
         <button type="button" class="btn btn-danger me-2" (click)="toggleedit()">Cancel</button>
-        <button type="button" class="btn btn-success" (click)="onSubmit()"
-            [disabled]="!remarks || !amount ">Recharge</button>
     </div>
 </div>
