--- a/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/refund/refund.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/LCO_Recharge/refund/refund.component.html
@@ -53,6 +53,6 @@
     </div>
 </div>
 <div class="d-flex justify-content-center align-item-center mx-5 mb-4">
+    <button type="submit" class="btn btn-success me-2" (click)="onSubmit()">Refund</button>
     <button type="button" class="btn btn-danger me-2" (click)="toggleedit()">Cancel</button>
-    <button type="submit" class="btn btn-success" (click)="onSubmit()">Refund</button>
 </div>
