--- a/src/app/admin/features/channel_setting/_Dialogue/operator/add-lco-business/add-lco-business.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/operator/add-lco-business/add-lco-business.component.html
@@ -28,7 +28,7 @@
 
 
     <div class="d-flex justify-content-center align-item-center mx-5 mb-4">
+        <button type="submit" class="btn btn-success me-2" (click)="submit()">Create</button>
         <button type="button" class="btn btn-danger me-2" (click)="toggleedit()">Cancel</button>
-        <button type="submit" class="btn btn-success" (click)="submit()">Create</button>
     </div>
 </div>
