--- a/src/app/admin/features/channel_setting/_Dialogue/operator/lcodashboard/lcodashboard.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/operator/lcodashboard/lcodashboard.component.html
@@ -20,7 +20,7 @@
                                         style="width: 50px;">
                                 </div>
                                 <div class=" col-10  " style="padding: 0.5rem;">
-                                    <div class="d-flex">
+                                    <div class="d-flex mb-2">
                                         <div class="col-5 text2 ">
                                             <p class="text2">OPERATOR NAME
                                             </p>
@@ -43,10 +43,11 @@
                                             <p>{{mobile }}</p>
                                         </div>
                                     </div>
+
                                 </div>
                             </div>
                             <div class="line mb-2"></div>
-                            <div class="col-12 ">
+                            <div class="col-12 mb-2">
                                 <div class="d-flex">
                                     <div class="col-4 mb-1 text2">
                                         MAIL ID
@@ -57,7 +58,7 @@
                                         {{mailid }}
                                     </div>
                                 </div>
-                                <div class="d-flex">
+                                <div class="d-flex mb-2">
                                     <div class="col-4  mb-1 text2">
                                         USER ID
                                     </div>
@@ -67,7 +68,7 @@
                                         {{userid }}
                                     </div>
                                 </div>
-                                <div class="d-flex">
+                                <div class="d-flex mb-2">
                                     <div class="col-4  mb-1 text2">
                                         PASSWORD </div>
                                     <div class="col-1 mb-1 text2">
@@ -76,7 +77,7 @@
                                         {{password }}
                                     </div>
                                 </div>
-                                <div class="d-flex">
+                                <div class="d-flex mb-2">
                                     <div class="col-4  mb-1 text2">
                                         ADDRESS</div>
                                     <div class="col-1  mb-1 text2">
@@ -85,7 +86,7 @@
                                         {{address }},{{area}},{{state}}
                                     </div>
                                 </div>
-                                <div class="d-flex">
+                                <div class="d-flex mb-2">
                                     <div class="col-4  mb-1 text2">
                                         PINCODE </div>
                                     <div class="col-1  mb-1 text2">
@@ -94,17 +95,6 @@
                                         {{pincode }}
                                     </div>
                                 </div>
-                                <!-- <div class="d-flex">
-                                    <div class="col-4  mb-1 text2">
-                                        STATUS </div>
-                                    <div class="col-1  mb-1 text2">
-                                        : </div>
-                                    <div class="col-7 ">
-                                        <span [ngClass]="isactive ? 'active-status' : 'deactive-status'">
-                                            {{ isactive ? 'Active' : 'Deactive' }}
-                                        </span>
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -122,7 +112,7 @@
                                 <div class="col-12 col-md-4 d-flex  justify-content-center align-items-center">
                                     <span for="">SELECT PACKAGE </span>
                                 </div>
-                                <div class="col-12 col-md-4">
+                                <div class="col-12 col-md-5">
                                     <!-- <select name="packages" id="packages" (change)="onPackageSelect()">
                                         <option value="">Selected Package</option>
                                         <option *ngFor="let package of packageid" [value]="getPackageId(package)">
@@ -131,10 +121,9 @@
                                     </select> -->
 
                                     <select name="packages" id="packages" (ngModelChange)="onPackageSelect($event)"
-                                    [(ngModel)]="selectedPackage">
+                                        [(ngModel)]="selectedPackage">
                                         <option value="">Selected Package</option>
-                                        <option *ngFor="let pack of packageid"
-                                        [value]="getPackageValue(pack)">
+                                        <option *ngFor="let pack of packageid" [value]="getPackageValue(pack)">
                                             {{ getPackageName(pack) }}
                                         </option>
                                     </select>
@@ -168,7 +157,7 @@
                                 </span>
                             </div>
                             <div class="col-12 col-md-12 mb-3">
-                                <ag-grid-angular #agGrid id="myGrid" style="text-align: center;" domLayout='autoHeight'
+                                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight'
                                     class="ag-theme-alpine table-class" rowAnimation [gridOptions]="gridOptions"
                                     [columnDefs]="columnDefs" [rowSelection]="rowSelection"
                                     (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
