--- a/src/app/admin/features/channel_setting/_Dialogue/operator/new-lco/new-lco.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/operator/new-lco/new-lco.component.html
@@ -190,6 +190,6 @@
 </div>
 
 <div class="d-flex justify-content-center align-item-center mx-5 mb-4">
+    <button type="submit" class="btn btn-success me-2" (click)="onSubmit()">Create</button>
     <button type="button" class="btn btn-danger me-2" (click)="toggleedit()">Cancel</button>
-    <button type="submit" class="btn btn-success" (click)="onSubmit()">Create</button>
 </div>
