--- a/src/app/admin/features/channel_setting/package-reference/package-reference.component.html
+++ b/src/app/admin/features/channel_setting/package-reference/package-reference.component.html
@@ -27,11 +27,11 @@
         </div>
 
         <div *ngIf="selectedTab">
-            <div class="col-12 col-sm-12 align-items-center justify-content-center responsive-container"
+            <div class="col-12 col-sm-8 align-items-center justify-content-center responsive-container"
                 style="margin: auto;">
                 <ag-grid-angular #agGrid id="myGrid"  domLayout='autoHeight'
                     class="ag-theme-alpine table-class" rowAnimation [gridOptions]="gridOptions"
-                    [rowSelection]="rowSelection" [columnDefs]="columnDefs" [rowData]="rowData"
+                    [columnDefs]="columnDefs" [rowData]="rowData"
                     [enableCellTextSelection]="true" (selectionChanged)="onSelectionChanged()"
                     (gridReady)="onGridReady($event)">
                 </ag-grid-angular>
