--- a/src/app/admin/features/subscriber/subscriber-details/subscriber-details.component.html
+++ b/src/app/admin/features/subscriber/subscriber-details/subscriber-details.component.html
@@ -5,18 +5,16 @@
         </div>
         <div class="col-6 col-md-3">
             <select id="subscriber_list" [(ngModel)]="selectedStatusId" (change)="onSubscriberStatusChange()">
-                <option value="-1"  selected>Select Subscriber List</option>
+                <option value="-1" selected>Select Subscriber List</option>
                 <option value="0">New </option>
                 <option value="1">Active </option>
                 <option value="2">Deactive </option>
                 <option value="3">Suspend </option>
                 <option value="4">Block </option>
+                <option value="5">Inactive </option>
             </select>
         </div>
-
     </div>
-
-
     <h3>SUBSCRIBER DETAILS</h3>
     <div class="col-12 align-items-center justify-content-center responsive-container" style="margin: auto; ">
         <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" rowAnimation
